--- a/src/app/features/user-management/profile/buy-list/buy-list.component.scss
+++ b/src/app/features/user-management/profile/buy-list/buy-list.component.scss
@@ -1,9 +1,25 @@
+@import '../../../../../assets/css/var.scss';
 .big-input-container {
   min-height: 356px;
   .big-delete-input {
     padding: 20px 300px 0px 300px;
     .btn {
       margin-right: 10px;
+      .add-btn {
+        color: $black;
+        background-color: $yellow;
+      }
+      .remove-btn {
+        color: $white;
+        background-color: $red;
+      }
+      .mat-raised-button[disabled]:not([class*='mat-elevation-z']) {
+        box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.2), 0 0 0 0 rgba(0, 0, 0, 0.14),
+          0 0 0 0 rgba(0, 0, 0, 0.12) !important;
+        background-color: rgba(0, 0, 0, 0.12) !important;
+        color: rgba(0, 0, 0, 0.26) !important;
+        cursor: default !important;
+      }
     }
   }
   .buy-card-container {
@@ -49,4 +65,59 @@
     }
   }
 }
-
+.dark-big-input-container {
+  .mat-chip.mat-standard-chip {
+    background-color: $lightergray !important;
+    color: $white;
+  }
+  .big-delete-input {
+    .btn {
+      .add-btn {
+        background-color: $green !important;
+      }
+      .remove-btn {
+        background-color: $raspberry !important;
+      }
+    }
+  }
+  .buy-card-container {
+    .roww {
+      .mat-card {
+        box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14),
+          0 3px 14px 2px rgba(0, 0, 0, 0.12) !important;
+        margin-bottom: 10px;
+        color: $white;
+        background-color: $darkgray !important;
+      }
+      .todo {
+        .todo-label {
+          &.todo-label-done {
+            color: $black;
+            opacity: 0.5;
+          }
+        }
+        .mat-checkbox .mat-ripple-element {
+          background-color: $white !important;
+        }
+        .mat-checkbox-frame {
+          border-color: rgba(255, 255, 255, 0.7) !important;
+        }
+        .mat-checkbox-mixedmark {
+          background-color: #303030 !important;
+        }
+        .mat-checkbox-checked.mat-accent .mat-checkbox-background,
+        .mat-checkbox-indeterminate.mat-accent .mat-checkbox-background {
+          background: $green !important;
+          color: $black !important;
+        }
+        .mat-checkbox-checked:not(.mat-checkbox-disabled).mat-accent .mat-ripple-element,
+        .mat-checkbox:active:not(.mat-checkbox-disabled).mat-accent .mat-ripple-element {
+          background: $green !important;
+        }
+        .mat-checkbox-checkmark-path {
+          stroke: $black !important;
+        }
+      }
+    }
+  }
+}
