--- a/src/app/shared/big-input/big-input-action/big-input-action.component.html
+++ b/src/app/shared/big-input/big-input-action/big-input-action.component.html
@@ -1,3 +1,8 @@
-<button mat-raised-button [color]="color" [disabled]="disabled" (click)="onClick()">
+<button
+  [ngClass]="{'big-btn':true,'dark-big-btn' :( property.nightmode | async)}"
+  mat-raised-button
+  [disabled]="disabled"
+  (click)="onClick()"
+>
   <mat-icon>{{iconname}}</mat-icon>
 </button>
