--- a/src/app/features/user-management/profile/view-profile/view-profile.component.html
+++ b/src/app/features/user-management/profile/view-profile/view-profile.component.html
@@ -1,5 +1,5 @@
 <div
-  class="profile-container"
+  [ngClass]="{'profile-container':true,'dark-profile-container' :( property.nightmode | async)}"
   [ngStyle]="{'padding-top': (paddingtop | async)  +'px'}"
   fxLayout="row"
   fxLayoutAlign="start center"
@@ -26,36 +26,39 @@
     <mat-card class="profile-card">
       <mat-card-title>{{"user.form_heading.profile_details" | translate}}</mat-card-title>
       <mat-card-content>
-        <mat-form-field appearance="outline">
-          <mat-label>{{"user.form.username" | translate}}</mat-label>
-          <input autocomplete="off" matInput readonly value="{{ userdata?.name }}" />
-          <mat-icon matSuffix>person</mat-icon>
-        </mat-form-field>
-        <mat-form-field appearance="outline">
-          <mat-label>{{"user.form.email" | translate}}</mat-label>
-          <input autocomplete="off" matInput readonly value="{{ userdata?.email }}" />
-          <mat-icon matSuffix>email</mat-icon>
-        </mat-form-field>
-        <mat-form-field appearance="outline">
-          <mat-label>{{"user.form.password" | translate}}</mat-label>
-          <input
-            autocomplete="off"
-            matInput
-            [type]="hide ? 'password' : 'text'"
-            readonly
-            value="value"
-          />
-          <button
-            mat-icon-button
-            matTooltip="{{hide ? ('tooltip.show' | translate) : ('tooltip.hide'  |translate) }}"
-            matTooltipPosition="left"
-            matSuffix
-            matSuffix
-            (click)="hide = !hide"
-          >
-            <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-          </button>
-        </mat-form-field>
+        <form class="edit-form">
+          <mat-form-field appearance="outline">
+            <mat-label>{{"user.form.username" | translate}}</mat-label>
+            <input autocomplete="off" matInput readonly value="{{ userdata?.name }}" />
+            <mat-icon class="person-icon" matSuffix>person</mat-icon>
+          </mat-form-field>
+          <mat-form-field appearance="outline">
+            <mat-label>{{"user.form.email" | translate}}</mat-label>
+            <input autocomplete="off" matInput readonly value="{{ userdata?.email }}" />
+            <mat-icon class="email-icon" matSuffix>email</mat-icon>
+          </mat-form-field>
+          <mat-form-field appearance="outline">
+            <mat-label>{{"user.form.password" | translate}}</mat-label>
+            <input
+              autocomplete="off"
+              matInput
+              [type]="hide ? 'password' : 'text'"
+              readonly
+              value="value"
+            />
+            <button
+              mat-icon-button
+              class="password-btn"
+              matTooltip="{{hide ? ('tooltip.show' | translate) : ('tooltip.hide'  |translate) }}"
+              matTooltipPosition="left"
+              matSuffix
+              matSuffix
+              (click)="hide = !hide"
+            >
+              <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+            </button>
+          </mat-form-field>
+        </form>
       </mat-card-content>
     </mat-card>
   </div>
