--- a/src/app/features/user-management/view-orders/view-orders.component.html
+++ b/src/app/features/user-management/view-orders/view-orders.component.html
@@ -1,6 +1,6 @@
 <app-navbar [isHidden]="true"></app-navbar>
 <app-jumbotron [Heading]="'user.main_heading.your_orders'"></app-jumbotron>
-<div class="order-container">
+<div [ngClass]="{'order-container':true,'dark-order-container': ( property.nightmode | async)}">
   <mat-accordion>
     <ng-container *ngFor="let order of orderitems">
       <mat-expansion-panel>
@@ -49,13 +49,13 @@
 
           <ng-container matColumnDef="action">
             <th mat-header-cell *matHeaderCellDef style="width: 100px;">
-              <button class="cancel-btn" mat-raised-button color="warn">
+              <button class="cancel-btn" mat-raised-button>
                 {{"user.product.cancel_this_order" | translate}}
                 <mat-icon>cancel</mat-icon>
               </button>
             </th>
             <td mat-cell *matCellDef="let element">
-              <button mat-icon-button color="primary" (click)="quickview(element)">
+              <button mat-icon-button class="view-btn" (click)="quickview(element)">
                 <mat-icon>remove_red_eye</mat-icon>
               </button>
             </td>
@@ -75,7 +75,11 @@
   [ngClass]="{'bottom-action-bar': true,'dark-bottom-action-bar' :( property.nightmode | async)}"
   class="order-button-wrap"
 >
-  <button mat-raised-button [routerLink]="['/home']" class="first-btn" class="order-button">
+  <button
+    mat-raised-button
+    [routerLink]="['/home']"
+    [ngClass]="{'third-btn': true , 'second-btn' :( property.nightmode | async),'order-button':true}"
+  >
     {{"user.cart.continue_shopping" | translate}}
   </button>
 </mat-toolbar>
