--- a/src/app/shared/big-input/big-input/big-input.component.html
+++ b/src/app/shared/big-input/big-input/big-input.component.html
@@ -1,7 +1,6 @@
 <mat-card
-  class="big-input"
+  [ngClass]="{'big-input':true,'dark-big-input' :( property.nightmode | async), 'has-focus': hasFocus}"
   [ngStyle]="{'min-height': height + 'px' ,'border-radius' : radius + 'px'}"
-  [ngClass]="{ 'has-focus': hasFocus }"
 >
   <input
     autocomplete="off"
