--- a/src/assets/css/black-component.scss
+++ b/src/assets/css/black-component.scss
@@ -5,9 +5,10 @@
   background-color: $darkergray;
   min-height: 100vh;
 }
-
 .dark-space-medium {
   .showcase-block {
+    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14),
+      0 3px 14px 2px rgba(0, 0, 0, 0.12) !important;
     background-color: $cardgray !important;
     &:hover {
       // border: 1px solid $white;
@@ -25,6 +26,8 @@
 }
 .dark-input-template {
   .input-card {
+    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14),
+      0 3px 14px 2px rgba(0, 0, 0, 0.12) !important;
     color: $white;
     background-color: $cardgray;
     &.mat-card {
@@ -104,8 +107,8 @@
       .mat-form-field-appearance-outline .mat-form-field-outline {
         color: rgba(255, 255, 255, 0.42);
       }
-      .mat-form-field-appearance-legacy .mat-form-field-label {
-        color: rgba(255, 255, 255, 0.7);
+      .mat-form-field-label {
+        color: rgba(255, 255, 255, 0.7) !important;
       }
       .mat-input-element::placeholder {
         color: rgba(255, 255, 255, 0.7) !important;
@@ -113,9 +116,6 @@
       .input-full-width {
         .mat-input-element {
           caret-color: $darkpurple !important;
-        }
-        .mat-form-field-label {
-          color: rgba(255, 255, 255, 0.7) !important;
         }
       }
     }
@@ -141,6 +141,8 @@
     color: $white;
   }
   .mat-table {
+    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14),
+      0 3px 14px 2px rgba(0, 0, 0, 0.12) !important;
     background-color: $darkgray;
     .mat-header-cell {
       color: $lightestgray;
@@ -148,6 +150,15 @@
     .mat-cell,
     .mat-footer-cell {
       color: $lightwhite;
+    }
+    mat-header-row,
+    mat-row {
+      border-bottom-color: rgba(255, 255, 255, 0.12);
+    }
+    mat-row {
+      &:hover {
+        background: $grey !important;
+      }
     }
   }
   .mat-raised-button {
@@ -166,15 +177,7 @@
       background-color: $green !important;
     }
   }
-  mat-header-row,
-  mat-row {
-    border-bottom-color: rgba(255, 255, 255, 0.12);
-  }
-  mat-row {
-    &:hover {
-      background: $grey !important;
-    }
-  }
+
   .input-quantity {
     .mat-form-field-appearance-outline .mat-form-field-outline {
       color: rgba(216, 213, 213, 0.64);
@@ -208,6 +211,166 @@
     // }
   }
 }
+.dark-total-card {
+  color: $lightwhite;
+}
 .dark-bottom-action-bar {
   background-color: $darkpurple !important;
+}
+.dark-mat-tab {
+  .mat-tab-nav-bar,
+  .mat-tab-header {
+    border-bottom: 1px solid rgba(255, 255, 255, 0.12);
+  }
+  .mat-tab-header-pagination-disabled .mat-tab-header-pagination-chevron {
+    border-color: rgba(255, 255, 255, 0.5);
+  }
+  .mat-ink-bar {
+    background-color: $purple !important;
+  }
+  .mat-tab-label,
+  .mat-tab-link {
+    color: $white;
+  }
+}
+.dark-profile-container {
+  .profile-card {
+    background-color: $darkgray;
+    color: $white;
+    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14),
+      0 3px 14px 2px rgba(0, 0, 0, 0.12) !important;
+    .mat-card-title {
+      color: $white !important;
+      font-weight: normal;
+    }
+    &:hover {
+      // transform: translateY(-2px);
+    }
+    .edit-form {
+      .password-btn {
+        color: $red !important;
+      }
+      .email-icon {
+        color: gold !important;
+      }
+      .person-icon {
+        color: $black !important;
+      }
+      .mat-select-arrow {
+        color: rgba(255, 255, 255, 0.54);
+      }
+      .mat-select-value {
+        color: rgba(255, 255, 255, 0.87) !important;
+      }
+      .mat-form-field-appearance-legacy .mat-form-field-underline {
+        background-color: rgba(255, 255, 255, 0.7);
+      }
+      .mat-form-field.mat-focussed.mat-form-field-ripple {
+        background-color: $darkpurple !important;
+      }
+      .mat-form-field-invalid .mat-input-element {
+        caret-color: $red !important;
+      }
+      .mat-form-field.mat-form-field-invalid .mat-form-field-label {
+        color: $red !important;
+      }
+      .mat-form-field.mat-form-field-invalid .mat-form-field-outline {
+        color: $red !important;
+      }
+      .mat-form-field.mat-form-field-invalid .mat-form-field-ripple,
+      .mat-form-field.mat-form-field-invalid .mat-form-field-ripple.mat-accent {
+        background-color: $red !important;
+      }
+      .mat-form-field-appearance-outline .mat-form-field-outline-thick {
+        color: rgba(255, 255, 255, 0.87);
+      }
+      .mat-form-field-appearance-outline .mat-form-field-outline {
+        color: rgba(255, 255, 255, 0.42);
+      }
+      .mat-form-field-label {
+        color: rgba(255, 255, 255, 0.7) !important;
+      }
+      .mat-input-element::placeholder {
+        color: rgba(255, 255, 255, 0.7) !important;
+      }
+      .mat-input-element {
+        caret-color: $darkpurple !important;
+      }
+    }
+    .mat-form-field {
+      width: 100%;
+    }
+  }
+  .profile-image-card {
+    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14),
+      0 3px 14px 2px rgba(0, 0, 0, 0.12) !important;
+    background-color: $darkgray;
+    .mat-card-title {
+      color: $white !important;
+    }
+    .action-wrap {
+      .mat-raised-button {
+      }
+    }
+    &:hover {
+    }
+  }
+}
+.dark-order-container {
+  .mat-expansion-panel-body {
+    background-color: $lightergray;
+  }
+  .mat-expansion-panel-header-title {
+    color: rgba(255, 251, 251, 0.87);
+  }
+  .mat-expansion-indicator::after,
+  .mat-expansion-panel-header-description {
+    color: rgba(255, 254, 254, 0.54);
+  }
+  .mat-expansion-panel {
+    background: $darkcardgray;
+    border-radius: 10px !important;
+    &:hover {
+      // transform: translateY(4px);
+    }
+    .mat-expansion-panel-header {
+      height: 80px !important;
+      background: $darkcardgray;
+      // &:hover {
+      //   background-color: #673ab71c;
+      // }
+      p {
+        color: $white;
+      }
+    }
+    .mat-table {
+      .view-btn {
+        color: $yellow;
+      }
+      .cancel-btn {
+        background-color: $green;
+        color: $black;
+      }
+      background-color: $lightergray;
+      .mat-header-cell {
+        color: $lightestgray;
+      }
+      .mat-cell,
+      .mat-footer-cell {
+        color: $lightwhite;
+      }
+      .mat-header-row,
+      .mat-row {
+        border-bottom-color: rgba(255, 255, 255, 0.12);
+      }
+      .mat-row {
+        &:hover {
+          background: $grey !important;
+        }
+      }
+    }
+    .mat-card {
+      box-shadow: none;
+    }
+  }
 }
