--- a/src/assets/css/forced-angular-components.scss
+++ b/src/assets/css/forced-angular-components.scss
@@ -1,28 +1,36 @@
-.mat-menu-panel {
-  background-color: $darkgray !important;
-  color: $white !important;
-  .mat-menu-item-highlighted:not([disabled]),
-  .mat-menu-item.cdk-keyboard-focused:not([disabled]),
-  .mat-menu-item.cdk-program-focused:not([disabled]),
-  .mat-menu-item:hover:not([disabled]) {
-    background: $grey !important;
-  }
-  .mat-menu-item {
+.cdk-overlay-container {
+  // ----------------------------------Mat Option -----------------------------------------------
+
+  .dark-option.mat-active {
+    background: $darkergray !important;
     color: $white !important;
   }
-  .mat-menu-item .mat-icon-no-color, //aa important che main line
-  .mat-menu-item-submenu-trigger::after {
+  .dark-option {
+    background-color: $darkgray;
     color: $white;
+    &:hover {
+      background-color: $grey;
+    }
   }
-}
-.mat-select-panel {
-  background-color: $darkgray !important;
-  color: $white !important;
-  .mat-option.mat-active {
-    background: $grey !important;
-    color: $purple !important;
+
+  // ----------------------------------Mat Divider -----------------------------------------------
+
+  .divider {
+    border-top-color: rgba(0, 0, 0, 0.5) !important;
   }
-  .mat-option-text {
-    color: $white;
+
+  // ----------------------------------Mat Menu -----------------------------------------------
+  .mat-menu-content:not(:empty) {
+    padding: 0 !important;
+  }
+  .dark-menuu-item {
+    background-color: $darkgray !important;
+    color: $white !important;
+    &:hover {
+      background: $grey !important;
+    }
+    .mat-icon {
+      color: $white;
+    }
   }
 }
