--- a/src/app/features/cart-management/checkout/billing/billing.component.html
+++ b/src/app/features/cart-management/checkout/billing/billing.component.html
@@ -144,8 +144,16 @@
     {{"user.form.confirm_and_continue" | translate}}
   </button>
 </div> -->
-<mat-toolbar [ngClass]="{'bottom-action-bar': true,'dark-bottom-action-bar' :( property.nightmode | async)}" class="u-text-right centre-button">
-  <button mat-raised-button class="first-btn" [disabled]="billingform.invalid" (click)="goForward()">
+<mat-toolbar
+  [ngClass]="{'bottom-action-bar': true,'dark-bottom-action-bar' :( property.nightmode | async)}"
+  class="u-text-right centre-button"
+>
+  <button
+    mat-raised-button
+    class="first-btn"
+    [disabled]="billingform.invalid"
+    (click)="goForward()"
+  >
     {{"user.form.confirm_and_continue" | translate}}
   </button>
 </mat-toolbar>
